--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_moneda">Nombre Moneda</string>
     <string name="symbol_moneda">simbolo Moneda</string>
-    <string name="get_info">Obtener Detalle</string>
+    <string name="get_info">Solicitar Información</string>
     <string name="rank">Ranking</string>
     <string name="price">Precio</string>
     <string name="date">Fecha</string>
